--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "@types/node-fetch": "^2.6.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "node-fetch": "^2.6.7"
   },
   "prettier": {
     "trailingComma": "none",
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true
+  },
+  "engines": {
+    "node": "^17.5.0"
   }
 }
