--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "dev": "nodemon -e ts,html --exec 'ts-node src/index.ts'",
     "build": "tsc",
     "start": "node dist/index.js",
-    "prettier": "prettier ./**/* --write"
+    "prettier": "prettier ./**/* --write",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/node-fetch": "^2.6.1",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
